Fixed spacing on dropdown arrows for Dropdowns and AutoCompletes

--- a/OpenELIS/version2/UI/trunk/src/org/openelis/ui/resources/css/lookupbutton.css
+++ b/OpenELIS/version2/UI/trunk/src/org/openelis/ui/resources/css/lookupbutton.css
@@ -5,8 +5,9 @@
     border-width:0 0 0 1px;
     box-shadow: 0 1px 3px #FFFFFF inset, 0 -9px #DDDFE2 inset;
     cursor: pointer;
-    height:16px;
+    height:auto;
     display : inline-block;
+    padding-left : 3px;
 }
 
 .Button > div {
